# dream-team-da1068d717b7d1b2e30ece54295306c0bc1fd76f

./: .gitignore  README.md  TOOL_AWARE_AGENTS.md  prompt_report.md  pyproject.toml  simulate_workflow.py  workflow.md  workflow_complete.md  workflow_complete_backup.md
experiments/agentds_food/: .gitkeep  QUICK_START.md  README.md  run_autonomous_experiment.py
src/dream_team/: __init__.py  agent.py  analyzers.py  context.py  context_builder.py  event_store.py  evolution_agent.py  evolution_policy.py  executor.py  grounded_evolution.py  interactive_control.py  interpreter.py  knowledge_state.py  llm.py  meetings.py  orchestrator.py  research.py  semantic_state.py  serialization.py  team.py  utils.py
