[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dream-team"
version = "0.1.0"
authors = [
    { name = "Sri", email = "your_email@example.com" },
]
description = "A dynamic multi-agent framework with evolving personas for benchmark-driven research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "notebook",
    "requests",
    "google-generativeai",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "multi-agent",
    "agent evolution",
    "LLM",
    "machine learning",
    "research automation",
]

[project.optional-dependencies]
dream-team = [
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/sri299792458/dream-team"
Issues = "https://github.com/sri299792458/dream-team/issues"
